--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://juneidshaikh18:URc2mFULBqgTbGRn@cluster0.59hirzr.mongodb.net/UrlShortener
-JWT_SECRET=juneid18
+MONGODB_URI=mongodb+srv://<Username>:<Password>@cluster0.59hirzr.mongodb.net/UrlShortener
+JWT_SECRET=<JWT_Scret>
