--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "node app.js",
     "build": "npm install --production && npm audit fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
